updated bootstrap, font-awesome, and jquery, and made multiple edits to fix outdated code, including to the social icons, navs, and color scheme

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
 
     <link rel="stylesheet" href="styles/main.css" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/bootstrap-social.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -34,27 +34,27 @@
 
     <!-- navbar code -->
     <div id="drop" class="dropdown">
-      <button class="btn btn-default btn-lg dropdown-toggle" aria-label="menu" type="button" id="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        <i class="glyphicon glyphicon-th-large"></i>
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="fas fa-th-large fa-2x"></i>
       </button>
-      <ul class="dropdown-menu" aria-labelledby="menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="./me.html">Me</a></li>
-        <li><a href="./projects.html">Work</a></li>
-        <li><a href="./philosophy.html">Contemplations</a></li>
-        <li><a href="./creative.html">Creative</a></li>
-        <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
-        <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
-        <li class="divider"></li>
-        <li><a href="/kaktus_app/" target="_blank">Kaktus</a></li>
-        <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-        <li><a href="/shooly/" target="_blank">Shooly</a></li>
-        <li><a href="/writer/" target="_blank">Writer</a></li>
-        <li><a href="/calculator/" target="_blank">calculator</a></li>
-        <li class="divider"></li>
-        <li><a href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a></li>
-        <li><a href="https://cash.me/$stephencsanders" target="_blank">Donate via Square Cash</a></li>
-      </ul>
+      <div class="dropdown-menu" aria-labelledby="menu">
+        <a class="dropdown-item" href="#">Home</a>
+        <a class="dropdown-item" href="./me.html">Me</a>
+        <a class="dropdown-item" href="./projects.html">Work</a>
+        <a class="dropdown-item" href="./philosophy.html">Contemplations</a>
+        <a class="dropdown-item" href="./creative.html">Creative</a>
+        <a class="dropdown-item" href="./assets/docs/scs-resume.pdf" target="_blank">CV</a>
+        <a class="dropdown-item" href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="/kaktus_app/" target="_blank">Kaktus</a>
+        <a class="dropdown-item" href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a>
+        <a class="dropdown-item" href="/shooly/" target="_blank">Shooly</a>
+        <a class="dropdown-item" href="/writer/" target="_blank">Writer</a>
+        <a class="dropdown-item" href="/calculator/" target="_blank">calculator</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a>
+        <a class="dropdown-item" href="https://cash.me/$stephencsanders" target="_blank">Donate via Square Cash</a>
+      </div>
     </div>
 
     <header class="jumbotron">
@@ -80,25 +80,23 @@
         </a>
 
         <a href="https://www.facebook.com/Scsandman4" target="_blank" class="btn btn-social-icon btn-lg btn-facebook">
-          <i class="fa fa-facebook"></i>
+          <i class="fab fa-facebook-f"></i>
         </a>
 
         <a href="https://twitter.com/ComplxAlgorithm" target="_blank" class="btn btn-social-icon btn-lg btn-twitter">
-          <i class="fa fa-twitter"></i>
+          <i class="fab fa-twitter"></i>
         </a>
 
         <a href="https://github.com/complxalgorithm" target="_blank" class="btn btn-social-icon btn-lg btn-github">
-          <i class="fa fa-github"></i>
+          <i class="fab fa-github-alt"></i>
         </a>
 
         <a href="https://www.linkedin.com/in/stephencsanders" target="_blank" class="btn btn-social-icon btn-lg btn-linkedin">
-          <i class="fa fa-linkedin"></i>
+          <i class="fab fa-linkedin"></i>
         </a>
 
         <a href="http://stackoverflow.com/story/stephenclydesanders" target="_blank" class="btn btn-social-icon btn-lg btn-stackoverflow">
-          <p>
-            <img src="https://cdn.sstatic.net/Sites/stackoverflow/company/img/logos/so/so-icon.png?v=c78bd457575a" alt="SO" height="28px" width="28px" />
-          </p>
+            <i class="fab fa-stack-overflow"></i>
         </a>
 
         <a href="https://refind.com/ComplxAlgorithm?invite=MTQXDUUpLz" target="_blank" class="btn btn-social-icon btn-lg btn-refind">
@@ -107,20 +105,22 @@
           </p>
         </a>
 
-        <a href="https://www.upwork.com/o/profiles/users/_~01633b8da61664339a/" target="_blank" class="btn btn-social-icon btn-lg btn-upwork">
-          <p id="upicon">Up</p>
-        </a>
-
         <a href="https://www.pinterest.com/complxalgorithm" target="_blank" class="btn btn-social-icon btn-lg btn-pinterest">
-          <i class="fa fa-pinterest"></i>
+          <i class="fab fa-pinterest"></i>
         </a>
 
         <a href="https://www.instagram.com/clydeman4" target="_blank" class="btn btn-social-icon btn-lg btn-instagram">
-          <i class="fa fa-instagram"></i>
+          <i class="fab fa-instagram"></i>
+        </a>
+          
+        <a href="https://vsco.co/stephencsanders/" target="_blank" class="btn btn-social-icon btn-lg btn-vsco">
+          <p>
+            <img src="https://theme.zdassets.com/theme_assets/116868/7cf6d362c9c40ecac2bf566e9d282f6a224ea647.png" alt="v" height="26px" width="26px" />  
+          </p>  
         </a>
 
         <a href="https://plus.google.com/+StephenSanders6496" target="_blank" class="btn btn-social-icon btn-lg btn-google">
-          <i class="fa fa-google"></i>
+          <i class="fab fa-google"></i>
         </a>
       </div>
     </div>
@@ -132,7 +132,7 @@
     <!-- Trigger button for modal -->
     <center>
       <div id="conbutton">
-        <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#contactModal">
+        <button type="button" class="btn btn-primary btn-default btn-lg" data-toggle="modal" data-target="#contactModal">
           Contact
         </button>
       </div>
@@ -178,7 +178,8 @@
 
     <script type="text/javascript" src="src/js/dropdown.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/js" src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
