--- a/philosophy.html
+++ b/philosophy.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/jpg" href="./assets/icons/FullSizeRender.jpg" />
 
     <link rel="stylesheet" href="styles/main.css" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles/bootstrap-social.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -33,67 +33,66 @@
 
     <!-- navbar code -->
     <div id="drop" class="dropdown">
-        <button class="btn btn-default btn-lg dropdown-toggle" aria-label="menu" type="button" id="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            <i class="glyphicon glyphicon-th-large"></i>
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-th-large fa-2x"></i>
         </button>
-        <ul class="dropdown-menu" aria-labelledby="menu">
-            <li><a href="./">Home</a></li>
-            <li><a href="./me.html">Me</a></li>
-            <li><a href="./projects.html">Work</a></li>
-            <li><a href="#">Contemplations</a></li>
-            <li><a href="./creative.html">Creative</a></li>
-            <li><a href="./assets/docs/scs-resume.pdf" target="_blank">CV</a></li>
-            <li><a href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a></li>
-            <li class="divider"></li>
-            <li><a href="/kaktus_app/" target="_blank">Kaktus</a></li>
-            <li><a href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a></li>
-            <li><a href="/shooly/" target="_blank">Shooly</a></li>
-            <li><a href="/writer/" target="_blank">Writer</a></li>
-            <li><a href="/calculator/" target="_blank">calculator</a></li>
-            <li class="divider"></li>
-            <li><a href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a></li>
-            <li><a href="https://cash.me/$stephencsanders" target="_blank">Donate via Square Cash</a></li>
-        </ul>
+        <div class="dropdown-menu" aria-labelledby="menu">
+            <a class="dropdown-item" href="./">Home</a>
+            <a class="dropdown-item" href="./me.html">Me</a>
+            <a class="dropdown-item" href="./projects.html">Work</a>
+            <a class="dropdown-item" href="#">Contemplations</a>
+            <a class="dropdown-item" href="./creative.html">Creative</a>
+            <a class="dropdown-item" href="./assets/docs/scs-resume.pdf" target="_blank">CV</a>
+            <a class="dropdown-item" href="http://tumblr.stephensanders.me" target="_blank">Tumblr Blog</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/kaktus_app/" target="_blank">Kaktus</a>
+            <a class="dropdown-item" href="/bookmarx-chrome-extension/" target="_blank">Bookmarx</a>
+            <a class="dropdown-item" href="/shooly/" target="_blank">Shooly</a>
+            <a class="dropdown-item" href="/writer/" target="_blank">Writer</a>
+            <a class="dropdown-item" href="/calculator/" target="_blank">calculator</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="https://www.paypal.me/stephensanders6496" target="_blank">Donate via PayPal</a>
+            <a class="dropdown-item" href="https://cash.me/$stephencsanders" target="_blank">Donate via Square Cash</a>
+        </div>
     </div>
 
     <header class="jumbotron">
       <h1 class="text-center">Contemplations</h1>
     </header>
 
-    <ul style="position: absolute; float: left; top: 250px" class="nav nav-pills nav-stacked">
-        <li><a href="./me.html">Me</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li role="presentation" class="active"><a href="#">Philosophy</a></li>
-        <li><a href="./creative.html">Creative</a></li>
-    </ul>
-
     <nav class="nav navbar philo-nav">
-        <li><a class="navbar-brand" href="http://philpapers.org/profile/207902" target="_blank">PhilPapers</a></li>
-        <li><a class="navbar-brand" href="https://brockport.academia.edu/StephenSanders" target="_blank">Academia.edu</a></li>
-        <li><a class="navbar-brand" href="http://www.iep.utm.edu/" target="_blank">IEP</a></li>
-        <li><a class="navbar-brand" href="http://plato.stanford.edu/" target="_blank">SEP</a></li>
-        <li><a class="navbar-brand" href="https://www.rep.routledge.com/" target="_blank">REP</a></li>
-        <li><a class="navbar-brand" href="https://www.britannica.com/topic/philosophy" target="_blank">Britannica</a></li>
-        <li><a class="navbar-brand" href="https://www.quora.com/topic/Philosophy" target="_blank">Quora</a></li>
-        <li><a class="navbar-brand" href="https://www.ted.com/topics/philosophy" target="_blank">TED Talks</a></li>
+        <li class="nav-item"><a class="navbar-link" href="http://philpapers.org/profile/207902" target="_blank">PhilPapers</a></li>
+        <li class="nav-item"><a class="navbar-link" href="https://brockport.academia.edu/StephenSanders" target="_blank">Academia.edu</a></li>
+        <li class="nav-item"><a class="navbar-link" href="http://www.iep.utm.edu/" target="_blank">IEP</a></li>
+        <li class="nav-item"><a class="navbar-link" href="http://plato.stanford.edu/" target="_blank">SEP</a></li>
+        <li class="nav-item"><a class="navbar-link" href="https://www.rep.routledge.com/" target="_blank">REP</a></li>
+        <li class="nav-item"><a class="navbar-link" href="https://www.britannica.com/topic/philosophy" target="_blank">Britannica</a></li>
+        <li class="nav-item"><a class="navbar-link" href="https://www.quora.com/topic/Philosophy" target="_blank">Quora</a></li>
+        <li class="nav-item"><a class="navbar-link" href="https://www.ted.com/topics/philosophy" target="_blank">TED Talks</a></li>
     </nav>
-
+    
+    <ul style="position:absolute;float:left;" class="nav flex-column philo-sm-nav">
+        <li class="nav-item"><a class="nav-link" href="./me.html">Me</a></li>
+        <li class="nav-item"><a class="nav-link" href="./projects.html">Projects</a></li>
+        <li role="presentation" class="nav-item"><a class="nav-link active" href="#">Philosophy</a></li>
+        <li class="nav-item"><a class="nav-link" href="./creative.html">Creative</a></li>
+    </ul>
 
     <h3 class="text-center">Work</h3>
 
     <article id="mainphilo" class="text-center">
-      <p>Here are the essays I've written, all of which are on my <a href="http://philpapers.org/profile/207902" target="_blank">PhilPapers profile</a>:</p>
+        <p>Here are the essays I've written, all of which are on my <a href="http://philpapers.org/profile/207902" target="_blank">PhilPapers profile</a>:</p>
 
-      <div id="xpapers_gadget">
-        Loading papers from Stephen C. Sanders's profile... (Click <a href="http://philpapers.org/profile/207902">here</a> if the papers don't load.)
-      </div>
-      <script type="text/javascript" src="src/philpapers.js"></script>
+        <div id="xpapers_gadget">
+            Loading papers from Stephen C. Sanders's profile... (Click <a href="http://philpapers.org/profile/207902">here</a> if the papers don't load.)
+        </div>
+        <script type="text/javascript" src="src/philpapers.js"></script>
     </article>
 
     <center>
-      <div id="philobutton">
-        <a href="https://philosowiseblog.wordpress.com" target="_blank"><button type="submit" name="philobutton" class="btn btn-default btn-lg philsub">See More</button></a>
-      </div>
+        <div id="philobutton">
+            <a href="https://philosowiseblog.wordpress.com" target="_blank"><button type="submit" name="philobutton" class="btn btn-primary btn-default btn-lg philsub">See More</button></a>
+        </div>
     </center>
 
     <a href="https://github.com/complxalgorithm/complxalgorithm.github.io" target="_blank" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#FD6C6C; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
@@ -101,6 +100,7 @@
     <script type="text/javascript" src="../src/dropdown.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/js" src="../../assets/js/jquery.min.js"></script>
+    <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
