much needed mobile styling tweaks since last update

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       </div>
     </center>
     
-    <center>
+    <center id="kofi">
         <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#f4cb42', 'M4M87ZJY');kofiwidget2.draw();</script>
     </center>
 
