--- a/me.html
+++ b/me.html
@@ -60,8 +60,8 @@
         <header class="jumbotron">
             <h1 class="text-center">Me</h1>
         </header>
-
-        <ul style="float:right;" class="nav">
+        
+        <ul style="float:right;" class="nav reg-nav">
             <li role="presentation" class="nav-item"><a class="nav-link active" href="#">Me</a></li>
             <li class="nav-item"><a class="nav-link" href="./projects.html">Projects</a></li>
             <li class="nav-item"><a class="nav-link" href="./philosophy.html">Philosophy</a></li>
