--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           Hello, I'm Stephen Sanders. The "C" stands for Clyde. I have to put it there since I'm named after my dad.
         </p>
         <p>
-          Anyways, I'm 22 years old, a student, web developer, writer, and amateur philosopher.
+          Anyways, I'm 23 years old, a student, web developer, writer, and amateur philosopher.
         </p>
         <p>
           Wanna see more?
@@ -167,7 +167,7 @@
 
     <center>
       <div id="affil">
-          <p><em class="un">Affiliations</em>: Junior Web Developer at <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
+          <p><em class="un">Affiliations</em>: Web Developer at <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
         <p><a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a> Class of 2018.</p>
       </div>
     </center>
