--- a/me.html
+++ b/me.html
@@ -84,7 +84,7 @@
                 <article id="spec" class="text-center">
                     <p>Yep, this is me.</p>
 
-                    <p>I'm Stephen Sanders, and I'm a graduate of SUNY College at Brockport, where I majored in Philosophy and minored in Anthropology and Computer Science. I am currently a Junior Web Developer for <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
+                    <p>I'm Stephen Sanders, and I'm a graduate of SUNY College at Brockport, where I majored in Philosophy and minored in Anthropology and Computer Science. I am currently a Web Developer for <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
 
                     <p>Here's some of the things that I learned over the duration of my academic career:</p>
                     <ul>
