minor change to me.html

--- a/me.html
+++ b/me.html
@@ -122,10 +122,10 @@
                         <article id="spec">
                             <p><strong class="un">Specialties</strong></p>
                             <ul>
-                                <li><strong>Development</strong>: I primarily develop for the web. I mainly use JavaScript (Node.js, AngularJS, React [Native], jQuery), HTML5/CSS3 (Sass, Bootstrap), Python (Django), WordPress, Linux, and Git.</li><br />
+                                <li><strong>Development</strong>: I primarily develop for the web. I mainly use WordPress, HTML5/CSS3 (Sass, Bootstrap), JavaScript (jQuery), and Git.</li><br />
                                 <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>) and social philosophy.</li><br />
                                 <li><strong>Writing</strong>: I am especially interested in writing about culture, politics &amp; economics, society, and various philosophical topics (as applied to reality/current events).</li><br />
-                                <li><strong>Genealogy</strong>: I have been researching my family tree for months, including family originating from Slovenia, Germany, France through Quebec, and Britain.</li>
+                                <li><strong>Genealogy</strong>: I have been researching my family tree for over a year and a half, including family originating from Slovenia, Germany, France through Quebec, and Britain.</li>
                             </ul>
                         </article>
                     </div>
