removed some social links from front page, removed things that I learned in school on me page, made pic of me look less wide, and made relevant styles edits

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
           <i class="fab fa-linkedin"></i>
         </a>
 
-        <a href="http://stackoverflow.com/story/stephenclydesanders" target="_blank" class="btn btn-social-icon btn-lg btn-stackoverflow">
+        <!--<a href="http://stackoverflow.com/story/stephenclydesanders" target="_blank" class="btn btn-social-icon btn-lg btn-stackoverflow">
             <i class="fab fa-stack-overflow"></i>
-        </a>
+        </a>-->
 
         <a href="https://refind.com/ComplxAlgorithm?invite=MTQXDUUpLz" target="_blank" class="btn btn-social-icon btn-lg btn-refind">
           <p>
-            <img src="https://refind.com/img/logo/logo.svg" alt="R" height="26px" width="26px" />
+            <img src="https://d2qsqwbsghr38c.cloudfront.net/img/logo.svg?79f1c4005a3a17e75b1cdc30296ddfaa009e40c1c42782704469193de406c5dc" alt="R" height="26px" width="26px" />
           </p>
         </a>
 
@@ -117,10 +117,6 @@
           <p>
             <img src="https://theme.zdassets.com/theme_assets/116868/7cf6d362c9c40ecac2bf566e9d282f6a224ea647.png" alt="v" height="26px" width="26px" />  
           </p>  
-        </a>
-
-        <a href="https://plus.google.com/+StephenSanders6496" target="_blank" class="btn btn-social-icon btn-lg btn-google">
-          <i class="fab fa-google"></i>
         </a>
       </div>
     </div>
