--- a/me.html
+++ b/me.html
@@ -81,53 +81,27 @@
             </div>
 
             <div class="mediv">
-                <article id="spec" class="text-center">
-                    <p>Yep, this is me.</p>
+                <article id="spec">
+                    <div class="main-intro">
+                        <p class="text-center">Yep, this is me.</p>
 
-                    <p>I'm Stephen Sanders, and I'm a graduate of SUNY College at Brockport, where I majored in Philosophy and minored in Anthropology and Computer Science. I am currently a Web Developer for <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
+                        <p>I'm Stephen Sanders, and I'm a graduate of SUNY College at Brockport, where I majored in Philosophy and minored in Anthropology. I also took a few classes related to web development. I am currently a Web Developer for <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
 
-                    <p>Here's some of the things that I learned over the duration of my academic career:</p>
-                    <ul>
-                      <li id="melist"><small><u>High School</u></small>
-                        <ul>Calculus</ul>
-                        <ul>Spanish</ul>
-                        <ul>Critical Thinking</ul>
-                        <ul>Microsoft Office 2010</ul>
-                      </li>
-                      <li id="melist"><small><u>College</u></small>
-                        <ul id="sublist"><em><u>SUNY Fredonia</u></em>:
-                          <li>Linux</li>
-                          <li>HTML5/CSS3/Bootstrap/JavaScript</li>
-                          <li>LAMP w/ PHP</li>
-                          <li>Ethics &amp; Epistemology</li>
-                          <li>Ancient Greek philosophy</li>
-                        </ul><br />
-                        <ul id="sublist"><em><u>SUNY College at Brockport</u></em>:
-                          <li>Computer Organization &amp; Architecture</li>
-                          <li>MySQL</li>
-                          <li>Logic</li>
-                          <li>Philosophy of Evolution</li>
-                          <li>Political Philosophy</li>
-                          <li>Personal Identity</li>
-                          <li>Seminar on <a href="https://en.wikipedia.org/wiki/John_Locke" target="_blank">John Locke</a></li>
-                        </ul>
-                      </li>
-                    </ul>
+                        <p>The main activities in which I partake outside of work are web development, <a href="https://www.wikitree.com/wiki/Sanders-11855" target="_blank">genealogical research</a>, writing, video games, and playing with my pupper.</p>
 
-                    <p>The main activities in which I partake outside of schoolwork are web development, <a href="https://www.wikitree.com/wiki/Sanders-11855" target="_blank">genealogical research</a>, and writing.</p>
-
-                    <p>I am also an amateur philosopher. I've written <a href="./philosophy.html">some neat stuff</a>.</p>
+                        <p>I am also an amateur philosopher; I have to put my philosophy degree to use somehow. I've written <a href="./philosophy.html">some neat stuff</a>.</p>
+                    </div>
 
                     <div class="stuff">
-                        <article id="spec">
-                            <p><strong class="un">Specialties</strong></p>
+                        <div id="spec">
+                            <p class="text-center"><strong class="un">Specialties</strong></p>
                             <ul>
                                 <li><strong>Development</strong>: I primarily develop for the web. I mainly use WordPress, HTML5/CSS3 (Sass, Bootstrap), JavaScript (jQuery), and Git.</li><br />
                                 <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>) and social philosophy.</li><br />
                                 <li><strong>Writing</strong>: I am especially interested in writing about culture, politics &amp; economics, society, and various philosophical topics (as applied to reality/current events).</li><br />
                                 <li><strong>Genealogy</strong>: I have been researching my family tree for over a year and a half, including family originating from Slovenia, Germany, France through Quebec, and Britain.</li>
                             </ul>
-                        </article>
+                        </div>
                     </div>
               </article>
             </div>
