updated information, including resume

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           Hello, I'm Stephen Sanders. The "C" stands for Clyde. I have to put it there since I'm named after my dad.
         </p>
         <p>
-          Anyways, I'm 23 years old, a student, web developer, writer, and amateur philosopher.
+          Anyways, I'm 23 years old, a web developer &amp; designer, writer, and amateur philosopher.
         </p>
         <p>
           Wanna see more?
@@ -75,10 +75,6 @@
       <div id="social" class="text-center">
         <a href="http://stephensanders.me" class="btn btn-social-icon btn-lg btn-home white">
           <i class="fa fa-home"></i>
-        </a>
-
-        <a href="https://www.facebook.com/Scsandman4" target="_blank" class="btn btn-social-icon btn-lg btn-facebook">
-          <i class="fab fa-facebook-f"></i>
         </a>
 
         <a href="https://twitter.com/ComplxAlgorithm" target="_blank" class="btn btn-social-icon btn-lg btn-twitter">
@@ -161,8 +157,7 @@
 
     <center>
       <div id="affil">
-          <p><em class="un">Affiliations</em>: Web Developer at <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
-        <p><a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a> Class of 2018.</p>
+          <p><a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a> Class of 2018.</p>
       </div>
     </center>
     
