--- a/me.html
+++ b/me.html
@@ -83,7 +83,7 @@
                     <div class="main-intro">
                         <p class="text-center">Yep, this is me.</p>
 
-                        <p>I'm Stephen Sanders, and I'm a graduate of SUNY College at Brockport, where I majored in Philosophy and minored in Anthropology. I also took a few classes related to web development. I am currently a Web Developer for <a href="https://jemediacorp.com/" target="_blank">J&amp;E Media Corp</a>.</p>
+                        <p>I'm Stephen Sanders, and I'm a graduate of SUNY College at Brockport, where I majored in Philosophy and minored in Anthropology. I also took a few classes related to web development. I am currently a freelance Web Developer &amp; Designer.</p>
 
                         <p>The main activities in which I partake outside of work are web development, <a href="https://www.wikitree.com/wiki/Sanders-11855" target="_blank">genealogical research</a>, writing, video games, and playing with my pupper.</p>
 
@@ -94,7 +94,7 @@
                         <div id="spec">
                             <p class="text-center"><strong class="un">Specialties</strong></p>
                             <ul>
-                                <li><strong>Development</strong>: I primarily develop for the web. I mainly use WordPress, HTML5/CSS3 (Sass, Bootstrap), JavaScript (jQuery), and Git. I am also rather capable of acting as a website administrator for multiple websites at a time.</li><br />
+                                <li><strong>Development</strong>: I primarily develop for the web. I mainly use WordPress, HTML5/CSS3 (SCSS, Bootstrap), JavaScript (jQuery), and Git. I am also rather capable of acting as a website manager for multiple websites at a time.</li><br />
                                 <li><strong>Philosophy</strong>: My writings concern topics such as epistemology (<a href="https://en.wikipedia.org/wiki/Foundationalism#Modest_foundationalism" target="_blank">modest foundationalism</a>) and social philosophy. I am an avid reader in topics related to political philosophy.</li><br />
                                 <li><strong>Writing</strong>: I occasionally write about culture, society, and various philosophical topics (as applied to current events). I also enjoy writing <a href="./creative.html">poetry</a> from time to time.</li><br />
                                 <li><strong>Genealogy</strong>: I have been researching my family tree for over a year and a half, including family originating from Slovenia, Germany, France through Quebec, and Britain. For instance, I managed to track down and source the whereabouts of the family of a great-grandmother who had barely spoken about her past to small villages in <a href="https://en.wikipedia.org/wiki/Gottschee" target="_blank">Gottschee</a>.</li>
