--- a/projects.html
+++ b/projects.html
@@ -88,6 +88,17 @@
                     </ul>
                 </li><br />
                 <li>
+                    <a id="name" href="https://github.com/complxalgorithm/baesick-theme" target="_blank">Baesick WordPress Theme</a>: A responsive, easily customizable WordPress starter theme that is based on the <a href="https://getbootstrap.com" target="_blank">Bootstrap</a> and <a href="https://getskeleton.com" target="_blank">Skeleton</a> frameworks.<br /><br />
+                    <p id="techused">Technologies Used:</p>
+                    <ul>
+                        <li>HTML5/CSS3/SCSS</li>
+                        <li>WordPress</li>
+                        <li>PHP</li>
+                        <li>BlueHost</li>
+                        <li>GitLab</li>
+                    </ul>
+                </li>
+                <li>
                     <a id="name" href="http://buffalofirefighters.com" target="_blank">Buffalo Fire Fighters website</a>: A website I built for the Buffalo Fire Fighters Local 282, which represents the over 700 men and women who make up the Buffalo Fire Department. The BFD serves over a quarter of a million people.<br />
                     <small style="padding-left:5px"><i><u>Note</u></i>: I have not worked on the website since late September 2017.</small><br />
                     <p id="techused">Technologies Used:</p>
@@ -127,15 +138,6 @@
                         <li><a href="https://en.wikipedia.org/wiki/AWK" target="_blank">Awk</a></li>
                         <li>Git</li>
                     </ul>
-                </li><br />
-                <li>
-                  <a id="name" href="./calculator/" target="_blank">calculator</a>: Simple, beautiful calculator web application written without any frameworks or libraries in HTML5, CSS3, and JavaScript.<br /><br />
-                  <p id="techused">Technologies Used:</p>
-                  <ul>
-                    <li>HTML5/CSS3</li>
-                    <li>JavaScript</li>
-                    <li>Git</li>
-                  </ul>
                 </li><br />
                 <li>
                   <a id="name" href="./writer/">writer</a>: One word editor, one web-based code editor with plenty of additional features in mind for the future.<br /><br />
