smaller screen layout fixes, small content edits

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
           <i class="fab fa-linkedin"></i>
         </a>
 
-        <!--<a href="http://stackoverflow.com/story/stephenclydesanders" target="_blank" class="btn btn-social-icon btn-lg btn-stackoverflow">
+        <a href="http://stackoverflow.com/story/stephenclydesanders" target="_blank" class="btn btn-social-icon btn-lg btn-stackoverflow">
             <i class="fab fa-stack-overflow"></i>
-        </a>-->
+        </a>
 
         <a href="https://refind.com/ComplxAlgorithm?invite=MTQXDUUpLz" target="_blank" class="btn btn-social-icon btn-lg btn-refind">
           <p>
@@ -157,6 +157,7 @@
 
     <center>
       <div id="affil">
+          <p>Freelance Web Developer &amp; Designer</p>
           <p><a href="https://www.brockport.edu" target="_blank">SUNY College at Brockport</a> Class of 2018.</p>
       </div>
     </center>
